--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -144,7 +144,7 @@
                     <div data-duration-in="300" data-duration-out="100" class="w-tabs">
                         <div class="tabs-menu w-tab-menu">
                             <a data-w-tab="Tab 4" class="tab-link-tab-2 w-inline-block w-tab-link w--current">
-                                <div>Product Details</div>
+                                <div>Details</div>
                             </a>
                             {{ if .Params.faqs }}
                             <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link">
