--- a/layouts/partials/product-menu.html
+++ b/layouts/partials/product-menu.html
@@ -15,7 +15,7 @@
         {{ range sort (where .Site.RegularPages.ByTitle "Section" "insurancecategories") "Params.weight" }}
         {{ $f := .File.LogicalName }}
         <div data-w-id="ad6c370b-e4af-00f1-d09f-50460c02b5ef" class="div-block-18 {{ if eq $cat $f -}}active{{- end -}}">
-            <a href="{{ .RelPermalink }}" class="sidebar-heading top w-inline-block">
+            <a href="{{ .RelPermalink }}" class="sidebar-heading top w-inline-block" style="display:block">
                 <div class="text-block-17">{{ .Title }}</div>
                 <div class="text-block-11"><i style="margin-left: 10px" class="fas fa-{{ .Params.fa_icon }}"></i> </div>
             </a>
@@ -23,7 +23,7 @@
             <div class="product-content">
                 {{ range sort (where $.Site.RegularPages "Section" "products") ".Title" }}
                     {{ if eq .Params.category $category }}
-                    <a href="{{ .RelPermalink }}" class="sidebar-heading sublink w-inline-block">
+                    <a href="{{ .RelPermalink }}" class="sidebar-heading sublink w-inline-block" style="width: 100%">
                         <div>{{ if eq .RelPermalink $link }}<i style="color: #ffbc00" class="fas fa-chevron-right"></i>&nbsp;{{ end }}{{ .Title }}</div>
                     </a>
                     {{ end }}
@@ -57,7 +57,7 @@
         <div class="product-content">
             {{ range sort (where $.Site.RegularPages.ByTitle "Section" "products") ".Title" }}
                 {{ if eq .Params.category $category }}
-                <a href="{{ .RelPermalink }}" class="sidebar-heading sublink w-inline-block">
+                <a href="{{ .RelPermalink }}" class="sidebar-heading sublink w-inline-block" style="width: 100%">
                     <div>{{ if eq .RelPermalink $link }}<i class="fas fa-chevron-right"></i>&nbsp;{{ end }}{{ .Title }}</div>
                 </a>
                 {{ end }}
