--- a/layouts/partials/main-nav.html
+++ b/layouts/partials/main-nav.html
@@ -63,9 +63,10 @@
             </div>
         </div>
     </div>
-    <a href="/posts" class="nav-link w-inline-block">
+    <!--hide get smart-->
+    <!-- <a href="/posts" class="nav-link w-inline-block">
         <div class="nav-link-text">Get Smart</div>
-    </a>
+    </a> -->
     <div class="nav-link dropdown-trigger">
         <div class="nav-link">
             <div class="nav-link-text">Explore&nbsp;&nbsp;<i class="fas fa-chevron-down"></i></div>
