--- a/layouts/partials/mobile-nav.html
+++ b/layouts/partials/mobile-nav.html
@@ -1,5 +1,5 @@
 <div data-w-id="6714678d-cb9c-b655-5209-6473232315b8" class="nav-items mobile">
-        <a href="#" class="nav-link w-inline-block">
+        <a href="/" class="nav-link w-inline-block">
             <div class="nav-link-text">Home</div>
         </a>
         <div class="nav-link dropdown-trigger">
