--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
                 <a href="/products" class="hero-button w-inline-block">
                     <div class="text-block">Shop Insurance</div>
                 </a>
-                <a href="#" class="ghost-button w-inline-block">
+                <a href="/contact" class="ghost-button w-inline-block">
                     <div class="text-block-2"><i class="fas fa-phone"></i>&nbsp;</div>
                     <div class="text-block">Contact Us</div>
                 </a>
